# Celonis_CI

./: .env.example  .gitignore  README.md
backend/: Dockerfile  README.md  pyproject.toml
backend/agents/: registry.py
backend/agents/research/: graph.py  state.py
backend/app/: config.py  exceptions.py  main.py
backend/app/agents/: registry.py
backend/app/api/: auth.py  brand.py  chat.py  competitors.py  event.py  geo.py  health.py  news.py  reports.py  sov.py  visualbranding.py  visuals.py  workflows.py
backend/app/auth/: dependencies.py  jwt.py
backend/app/ingestion/: pipeline.py
backend/app/llm/: __init__.py  base.py  openai_client.py  retry.py
backend/app/models/: schemas.py  topics.py
backend/app/orchestration/: capability_registry.py  graph.py  memory.py  state.py
backend/app/prompts/: assess.py  chat_basic.py  synthesize.py
backend/app/rag/: README.md  __init__.py  conversation_repository.py  document_repository.py  embeddings.py  ingest.py  repository.py  retrieval.py  supabase_client.py
backend/data/: gmail_credentials.json  gmail_token.json  newsletter_subscriptions.json
backend/scripts/: _tmp_dump_logos.py  _tmp_rescrape_celonis.py  check_snapshots.py  gmail_oauth_setup.py  run_brand_pipeline.py  run_research.py  run_visualbranding.py  scrape_visuals.py  test_geo_prompts.py
backend/scripts/migrations/: 001_chunks.sql  002_documents.sql  004_match_chunks_fn.sql  005_brand_geo_intelligence.sql  006_brand_geo_runs.sql  007_brand_geo_runs_recommendation_rate.sql  008_research_snapshots.sql  009_competitors.sql  011_sov_mentions.sql  (+2 more)
(+261 files in other folders)
