[project]
name = "celonis-ci-backend"
version = "0.1.0"
description = "Backend for the Celonis CI multi-agent competitive intelligence platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.102.0",
    "arq>=0.28.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "feedparser>=6.0.12",
    "firecrawl-py>=4.26.0",
    "httpx>=0.28.1",
    "langchain>=1.3.0",
    "langchain-anthropic>=1.4.3",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "openai>=2.36.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "redis>=5.3.1",
    "structlog>=25.5.0",
    "supabase>=2.30.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that call real external APIs (skipped by default)",
]
